--- a/index.html
+++ b/index.html
@@ -486,6 +486,13 @@
                     <span class="nav-icon">◆</span>
                     Dashboard
                 </a>
+
+                
+                <a href="seo-accelerator.html" class="nav-item">
+  <span class="nav-icon">⚡️</span>
+  SEO Accelerator
+</a>
+
                 <a href="#" class="nav-item">
                     <span class="nav-icon">◎</span>
                     Goals
